--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
   </header>
   <div class="container">
     <div class="blog-entry">
-      <h2><a href="dell-d630.html">Dell Latitude D630: A Linux Revival</a></h2>
-      <p>This guide walks through installing Xubuntu on the Dell Latitude D630, optimizing battery life, and getting Wi-Fi working smoothly.</p>
+      <h2><a href="thinkpad-x40.html">Thinkpad X40 with Antix</a></h2>
+      <p>Breathe new life into this old laptop by installing a lightweight linux distribution.This guide walks through installing Antix on the Thinkpad X40</p>
     </div>
     <div class="blog-entry">
-      <h2><a href="thinkpad-t400.html">ThinkPad T400 with Linux Mint</a></h2>
-      <p>Learn how to breathe new life into a ThinkPad T400 using Linux Mint. Covers drivers, power management, and performance tweaks.</p>
+      <h2><a href="thinkpad-x61s.html">ThinkPad x61s update BIOS to improve performance</a></h2>
+      <p>Double the hard drive performance by updating the BIOS</p>
     </div>
     <div class="blog-entry">
-      <h2><a href="hp-mini-210.html">HP Mini 210: Lightweight Linux Setup</a></h2>
-      <p>A step-by-step guide to installing antiX Linux on the HP Mini 210 for speed and usability on limited hardware.</p>
+      <h2><a href="samsung-305u.html">Samsung 305U: Small laptop with lightweight Lubuntu</a></h2>
+      <p>Update the wireless drivers and install Lubuntu on this neat little laptop.</p>
     </div>
   </div>
 </body>
