--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="container">
     <div class="blog-entry">
       <h2><a href="thinkpad-x40.html">Thinkpad X40 with Antix</a></h2>
-      <p>Breathe new life into this old laptop by installing a lightweight linux distribution.This guide walks through installing Antix on the Thinkpad X40</p>
+      <p>Breathe new life into this old laptop by updating the SSD and installing a lightweight linux distribution. This guide walks through installing Antix on the Thinkpad X40</p>
     </div>
     <div class="blog-entry">
       <h2><a href="thinkpad-x61s.html">ThinkPad x61s update BIOS to improve performance</a></h2>
