--- a/thinkpad-x40.html
+++ b/thinkpad-x40.html
@@ -8,11 +8,13 @@
     body { font-family: Arial, sans-serif; padding: 2em; background: #f9f9f9; }
     .content { max-width: 800px; margin: auto; background: white; padding: 2em; border-radius: 10px; }
     a { color: #0077cc; text-decoration: none; }
+    img { max-width: 100%; height: auto; border-radius: 8px; margin: 1em 0; }
   </style>
 </head>
 <body>
   <div class="content">
     <h1>Thinkpad x40: A Linux Revival</h1>
+    <img src="images/thinkpad-x40.jpg" alt="ThinkPad X40 running Linux">
     <p><a href="index.html">&larr; Back to blog list</a></p>
     <p>This is the oldest laptop I own, sometime from the early 2000s. In this guide I'll show how to upgrade to an SSD and install Antix, a lightweight and efficient Linux distribution that runs smoothly on older hardware.</p>
     <h2>Installation</h2>
