--- a/thinkpad-x40.html
+++ b/thinkpad-x40.html
@@ -14,7 +14,7 @@
 <body>
   <div class="content">
     <h1>Thinkpad x40: A Linux Revival</h1>
-    <img src="images/thinkpad-x40.jpg" alt="ThinkPad X40 running Linux">
+    <img src="images/thinkpad-x40.jpg" alt="ThinkPad X40 running Antix Linux">
     <p><a href="index.html">&larr; Back to blog list</a></p>
     <p>This is the oldest laptop I own, sometime from the early 2000s. In this guide I'll show how to upgrade to an SSD and install Antix, a lightweight and efficient Linux distribution that runs smoothly on older hardware.</p>
     <h2>Installation</h2>
