--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
     .blog-entry p {
       margin-bottom: 0;
     }
+    .blog-entry img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 6px;
+      margin-bottom: 0.5em;
+    }
     .blog-entry a {
       text-decoration: none;
       color: #0077cc;
@@ -49,16 +55,19 @@
   </header>
   <div class="container">
     <div class="blog-entry">
+      <img src="images/thinkpad-x40-thumb.jpg" alt="ThinkPad X40 thumbnail">
       <h2><a href="thinkpad-x40.html">Thinkpad X40 with Antix</a></h2>
-      <p>Breathe new life into this old laptop by updating the SSD and installing a lightweight linux distribution. This guide walks through installing Antix on the Thinkpad X40</p>
+      <p>Breathe new life into this old laptop by updating the SSD and installing a lightweight Linux distribution. This guide walks through installing Antix on the Thinkpad X40.</p>
     </div>
     <div class="blog-entry">
-      <h2><a href="thinkpad-x61s.html">ThinkPad x61s update BIOS to improve performance</a></h2>
-      <p>Double the hard drive performance by updating the BIOS</p>
+      <img src="images/thinkpad-x61s-thumb.jpg" alt="ThinkPad X61s thumbnail">
+      <h2><a href="thinkpad-x61s.html">ThinkPad X61s: Update BIOS to Improve Performance</a></h2>
+      <p>Double the hard drive performance by updating the BIOS on this reliable and compact ThinkPad.</p>
     </div>
     <div class="blog-entry">
-      <h2><a href="samsung-305u.html">Samsung 305U: Small laptop with lightweight Lubuntu</a></h2>
-      <p>Update the wireless drivers and install Lubuntu on this neat little laptop.</p>
+      <img src="images/samsung-305u-thumb.jpg" alt="Samsung 305U thumbnail">
+      <h2><a href="samsung-305u.html">Samsung 305U: Small Laptop with Lightweight Lubuntu</a></h2>
+      <p>Update the wireless drivers and install Lubuntu on this neat little laptop for a fast and responsive experience.</p>
     </div>
   </div>
 </body>
