--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
         <p>Update the wireless drivers and install Lubuntu on this neat little laptop for a fast and responsive experience.</p>
       </div>
     </div>
+     <div class="blog-entry">
+      <img src="images/tanix-tx6-thumb.jpg" alt="Samsung 305U thumbnail">
+      <div class="blog-text">
+        <h2><a href="tanix-tx6.html">Tanix TX6: install Armbian</a></h2>
+        <p>How to install Armbian on this little set top box, replacing the original Android with Alice UX.</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
