--- a/samsung-305u.html
+++ b/samsung-305u.html
@@ -7,11 +7,21 @@
   <style>
     body { font-family: Arial, sans-serif; padding: 2em; background: #f9f9f9; }
     .content { max-width: 800px; margin: auto; background: white; padding: 2em; border-radius: 10px; }
+    header {
+      background-color: #333;
+      color: white;
+      padding: 1em;
+      text-align: center;
+    }
     a { color: #0077cc; text-decoration: none; }
     img { max-width: 100%; height: auto; border-radius: 8px; margin: 1em 0; }
   </style>
 </head>
 <body>
+    <header>
+    <h1>Linux on Older Laptops</h1>
+    <p>Tips, tricks, and guides to revive your old hardware</p>
+  </header>
   <div class="content">
     <h1>Samsung 305U: small laptop with Lubuntu</h1>
     <img src="images/samsung-305u.jpg" alt="Samsung 305U running Lubuntu">
