--- a/tanix-tx6.html
+++ b/tanix-tx6.html
@@ -10,6 +10,12 @@
       padding: 2em;
       background: #f9f9f9;
     }
+    header {
+      background-color: #333;
+      color: white;
+      padding: 1em;
+      text-align: center;
+    }
     .content {
       max-width: 800px;
       margin: auto;
@@ -30,6 +36,10 @@
   </style>
 </head>
 <body>
+  <header>
+    <h1>Linux on Older Laptops</h1>
+    <p>Tips, tricks, and guides to revive your old hardware</p>
+  </header>
   <div class="content">
     <h1>Tanix TX6 with Armbian</h1>
     <img src="images/tanix-tx6.jpg" alt="Antix TX6 running Armbian">
