--- a/thinkpad-x61s.html
+++ b/thinkpad-x61s.html
@@ -12,6 +12,10 @@
   </style>
 </head>
 <body>
+    <header>
+    <h1>Linux on Older Laptops</h1>
+    <p>Tips, tricks, and guides to revive your old hardware</p>
+  </header>
   <div class="content">
     <h1>Thinkpad x61s: Update BIOS</h1>
     <img src="images/thinkpad-x61s.jpg" alt="ThinkPad X61s updating BIOS">
