--- a/thinkpad-x61s.html
+++ b/thinkpad-x61s.html
@@ -7,6 +7,12 @@
   <style>
     body { font-family: Arial, sans-serif; padding: 2em; background: #f9f9f9; }
     .content { max-width: 800px; margin: auto; background: white; padding: 2em; border-radius: 10px; }
+    header {
+      background-color: #333;
+      color: white;
+      padding: 1em;
+      text-align: center;
+    }
     a { color: #0077cc; text-decoration: none; }
     img { max-width: 100%; height: auto; border-radius: 8px; margin: 1em 0; }
   </style>
