--- a/index.html
+++ b/index.html
@@ -4,56 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Linux on Older Laptops</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background-color: #f9f9f9;
-    }
-    header {
-      background-color: #333;
-      color: white;
-      padding: 1em;
-      text-align: center;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 1em;
-    }
-    .blog-entry {
-      display: flex;
-      align-items: flex-start;
-      background: white;
-      margin-bottom: 1.5em;
-      padding: 1em;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    .blog-entry img {
-      width: 120px;
-      height: auto;
-      border-radius: 6px;
-      margin-right: 1em;
-      flex-shrink: 0;
-    }
-    .blog-text {
-      flex: 1;
-    }
-    .blog-text h2 {
-      margin-top: 0;
-      margin-bottom: 0.5em;
-    }
-    .blog-text p {
-      margin: 0;
-    }
-    .blog-text a {
-      text-decoration: none;
-      color: #0077cc;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
