--- a/thinkpad-x40.html
+++ b/thinkpad-x40.html
@@ -4,18 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Thinkpad x40: A Linux Revival</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 2em; background: #f9f9f9; }
-    .content { max-width: 800px; margin: auto; background: white; padding: 2em; border-radius: 10px; }
-    header {
-      background-color: #333;
-      color: white;
-      padding: 1em;
-      text-align: center;
-    }
-    a { color: #0077cc; text-decoration: none; }
-    img { max-width: 100%; height: auto; border-radius: 8px; margin: 1em 0; }
-  </style>
+   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
