--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <p>How to install Armbian on this little set top box, replacing the original Android with Alice UX.</p>
       </div>
     </div>
+    <a href="https://olegbt.github.io/">&larr; Back to GitHub main page</a>>
   </div>
 </body>
 </html>
